--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
     tools:context="com.example.java.retrofit2.MainActivity">
     <item android:id="@+id/search"
         android:title="@string/search_hint"
-        android:icon="@drawable/ic_search"
+        app:srcCompat="@drawable/ic_search"
         app:showAsAction="collapseActionView|ifRoom"
         app:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
